Carga capas hongos

--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -873,21 +873,36 @@
             <h2>🍄 Hongos</h2>
           </div>
 
-          <!-- Card de texto -->
+          <!-- Submenú de Modelos Climáticos -->
           <div class="subchapter-text">
-            <div class="text-content">
-                <p>
-                  Los hongos comestibles son fundamentales para los ecosistemas terrestres. Los hongos micorrícicos estructuran los bosques y mitigan el cambio climático mediante el almacenamiento de carbono en árboles y suelo. Representan una fuente alimentaria saludable: existen más de 200 géneros con especies útiles que pueden contribuir sustancialmente a la dieta y generar ingresos en países en desarrollo.
-                </p>
-                <p>
-                  México alberga aproximadamente 450 especies de hongos comestibles consumidas por diversos grupos étnicos, identificadas con más de 5,000 nombres. En Tlaxcala, especialmente en las faldas del Parque Nacional La Malinche, estos organismos tienen gran importancia biocultural, alimentaria, medicinal y económica. Usos recientes como la micoforestería y el micoturismo representan fuentes alternativas de ingresos y esquemas de manejo sostenible.
-                </p>
-                <p>
-                  El cambio climático amenaza su producción: modificaciones en precipitación, temperatura y lluvias torrenciales pueden alterar la composición de especies, favoreciendo hongos tolerantes al calor y sequía. Se observan cambios fenológicos, retrasos en fructificación y temporadas de crecimiento prolongadas. La modificación del nitrógeno en el suelo reduce la diversidad, y hongos tóxicos no nativos representan riesgos de intoxicación.
-                </p>
-                <p>
-                  Los resultados muestran que 25 especies (29%) presentan alta vulnerabilidad según modelos HadGEM3-GC31-LL y MIROC6, escenario SSP 5-8.5 para 2041-2060.
-                </p>
+            <div class="models-menu">
+              <h3 class="models-menu-title">Modelos Climáticos</h3>
+              <div class="models-list">
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp245" data-subcapitulo="3.3">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp245</span>
+                </button>
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp585" data-subcapitulo="3.3">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp245" data-subcapitulo="3.3">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp585" data-subcapitulo="3.3">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp245" data-subcapitulo="3.3">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp585" data-subcapitulo="3.3">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp585</span>
+                </button>
+              </div>
             </div>
           </div>
 
