--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -996,21 +996,36 @@
             <h2>🦇 Murciélagos</h2>
           </div>
 
-          <!-- Card de texto -->
+          <!-- Submenú de Modelos Climáticos -->
           <div class="subchapter-text">
-           <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
-            <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+            <div class="models-menu">
+              <h3 class="models-menu-title">Modelos Climáticos</h3>
+              <div class="models-list">
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp245" data-subcapitulo="3.5">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp245</span>
+                </button>
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp585" data-subcapitulo="3.5">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp245" data-subcapitulo="3.5">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp585" data-subcapitulo="3.5">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp245" data-subcapitulo="3.5">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp585" data-subcapitulo="3.5">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp585</span>
+                </button>
+              </div>
             </div>
           </div>
 
@@ -1045,21 +1060,36 @@
             <h2>⭐ Especies de Interés</h2>
           </div>
 
-          <!-- Card de texto -->
+          <!-- Submenú de Modelos Climáticos -->
           <div class="subchapter-text">
-           <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
-            <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+            <div class="models-menu">
+              <h3 class="models-menu-title">Modelos Climáticos</h3>
+              <div class="models-list">
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp245" data-subcapitulo="3.6">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp245</span>
+                </button>
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp585" data-subcapitulo="3.6">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp245" data-subcapitulo="3.6">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp585" data-subcapitulo="3.6">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp245" data-subcapitulo="3.6">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp585" data-subcapitulo="3.6">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp585</span>
+                </button>
+              </div>
             </div>
           </div>
 
