--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -56,6 +56,7 @@
           <a href="riesgo.html" class="navbar-link">Riesgo</a>
           <a href="amenazas.html" class="navbar-link">Amenazas</a>
           <a href="impactos.html" class="navbar-link">Impactos</a>
+          <a href="acciones-climaticas.html" class="navbar-link">Acciones Climáticas</a>
         </div>
       </div>
     </nav>
