--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -1880,14 +1880,39 @@
         });
       });
 
+      // Navbar y navbar indicator
+      const navbar = document.querySelector(".navbar");
+      const navbarIndicator = document.getElementById("navbarIndicator");
+
       // Efecto scroll en navbar
       window.addEventListener("scroll", () => {
-        const navbar = document.querySelector(".navbar");
         if (window.scrollY > 50) {
           navbar.classList.add("scrolled");
         } else {
           navbar.classList.remove("scrolled");
         }
+      });
+
+      // Mostrar/ocultar navbar con el indicador
+
+      // Mostrar navbar al hacer hover sobre el indicador
+      navbarIndicator.addEventListener("mouseenter", () => {
+        navbar.classList.add("visible");
+      });
+
+      // Mantener navbar visible mientras el mouse está sobre él
+      navbar.addEventListener("mouseenter", () => {
+        navbar.classList.add("visible");
+      });
+
+      // Ocultar navbar cuando el mouse sale
+      navbar.addEventListener("mouseleave", () => {
+        navbar.classList.remove("visible");
+      });
+
+      // Click en indicador para toggle del navbar
+      navbarIndicator.addEventListener("click", () => {
+        navbar.classList.toggle("visible");
       });
     </script>
   </body>
