--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -249,7 +249,7 @@
               <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -300,7 +300,7 @@
               <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -351,7 +351,7 @@
               <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -384,7 +384,7 @@
                   <li>* 25 especies prioritarias.</li>
                 </ul>
               </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
             </div>
           </div>
 
@@ -401,7 +401,7 @@
               <button class="nav-item active" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -434,7 +434,7 @@
                   <li>* 25 especies prioritarias.</li>
                 </ul>
               </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
             </div>
           </div>
 
@@ -451,7 +451,7 @@
               <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item active" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -484,7 +484,7 @@
                   <li>* 25 especies prioritarias.</li>
                 </ul>
               </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
             </div>
           </div>
 
@@ -501,7 +501,7 @@
               <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item active" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -517,7 +517,7 @@
         <section class="chapter subchapter-biodiversity" id="chapter-2-7" data-chapter="2.7" style="display: none;">
           <!-- Título del sub-capítulo -->
           <div class="subchapter-title">
-            <h2>⚠️ Especies en Riesgo/Prioritarias</h2>
+            <h2>Especies en Riesgo/Prioritarias</h2>
           </div>
 
           <!-- Card de texto -->
@@ -534,7 +534,7 @@
                   <li>* 25 especies prioritarias.</li>
                 </ul>
               </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
             </div>
           </div>
 
@@ -551,7 +551,7 @@
               <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item active" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item active" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -584,7 +584,7 @@
                   <li>* 25 especies prioritarias.</li>
                 </ul>
               </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
             </div>
           </div>
 
@@ -601,7 +601,7 @@
               <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item active" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -634,7 +634,7 @@
                   <li>* 🦋 Polillas</li>
                   <li>* 🦇 Murciélagos</li>
                   <li>* ⭐ Especies de interés</li>
-                  <li>* ⚠️ Especies en riesgo o prioritarias</li>
+                  <li>* Especies en riesgo o prioritarias</li>
                   <li>* 🧬 Subespecies</li>
                 </ul>
               </p>
@@ -655,7 +655,7 @@
               <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
               <button class="nav-item active" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
@@ -787,7 +787,7 @@
               <button class="nav-item" data-subcapitulo="3.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="3.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="3.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="3.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="3.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="3.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -851,7 +851,7 @@
               <button class="nav-item" data-subcapitulo="3.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="3.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="3.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="3.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="3.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="3.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -915,7 +915,7 @@
               <button class="nav-item" data-subcapitulo="3.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="3.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="3.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="3.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="3.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="3.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -979,7 +979,7 @@
               <button class="nav-item active" data-subcapitulo="3.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="3.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="3.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="3.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="3.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="3.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1043,7 +1043,7 @@
               <button class="nav-item" data-subcapitulo="3.4">🦋 Polillas</button>
               <button class="nav-item active" data-subcapitulo="3.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="3.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="3.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="3.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="3.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1107,7 +1107,7 @@
               <button class="nav-item" data-subcapitulo="3.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="3.5">🦇 Murciélagos</button>
               <button class="nav-item active" data-subcapitulo="3.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="3.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="3.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="3.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1122,7 +1122,7 @@
         <section class="chapter subchapter-biodiversity" id="chapter-3-7" data-chapter="3.7" style="display: none;">
           <!-- Título del sub-capítulo -->
           <div class="subchapter-title">
-            <h2>⚠️ Especies en Riesgo/Prioritarias</h2>
+            <h2>Especies en Riesgo/Prioritarias</h2>
           </div>
 
           <!-- Submenú de Modelos Climáticos -->
@@ -1171,7 +1171,7 @@
               <button class="nav-item" data-subcapitulo="3.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="3.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="3.6">⭐ Especies de Interés</button>
-              <button class="nav-item active" data-subcapitulo="3.7">⚠️ En Riesgo</button>
+              <button class="nav-item active" data-subcapitulo="3.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="3.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1235,7 +1235,7 @@
               <button class="nav-item" data-subcapitulo="3.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="3.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="3.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="3.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="3.7">En Riesgo</button>
               <button class="nav-item active" data-subcapitulo="3.8">🧬 Subespecies</button>              
             </div>
           </div>
@@ -1364,7 +1364,7 @@
               <button class="nav-item" data-subcapitulo="4.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="4.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="4.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="4.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="4.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="4.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1428,7 +1428,7 @@
               <button class="nav-item" data-subcapitulo="4.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="4.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="4.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="4.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="4.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="4.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1492,7 +1492,7 @@
               <button class="nav-item" data-subcapitulo="4.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="4.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="4.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="4.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="4.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="4.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1556,7 +1556,7 @@
               <button class="nav-item active" data-subcapitulo="4.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="4.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="4.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="4.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="4.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="4.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1620,7 +1620,7 @@
               <button class="nav-item" data-subcapitulo="4.4">🦋 Polillas</button>
               <button class="nav-item active" data-subcapitulo="4.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="4.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="4.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="4.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="4.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1684,7 +1684,7 @@
               <button class="nav-item" data-subcapitulo="4.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="4.5">🦇 Murciélagos</button>
               <button class="nav-item active" data-subcapitulo="4.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="4.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="4.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="4.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1699,7 +1699,7 @@
         <section class="chapter subchapter-biodiversity" id="chapter-4-7" data-chapter="4.7" style="display: none;">
           <!-- Título del sub-capítulo -->
           <div class="subchapter-title">
-            <h2>⚠️ Especies en Riesgo/Prioritarias</h2>
+            <h2>Especies en Riesgo/Prioritarias</h2>
           </div>
 
           <!-- Submenú de Modelos Climáticos -->
@@ -1748,7 +1748,7 @@
               <button class="nav-item" data-subcapitulo="4.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="4.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="4.6">⭐ Especies de Interés</button>
-              <button class="nav-item active" data-subcapitulo="4.7">⚠️ En Riesgo</button>
+              <button class="nav-item active" data-subcapitulo="4.7">En Riesgo</button>
               <button class="nav-item" data-subcapitulo="4.8">🧬 Subespecies</button>
             </div>
           </div>
@@ -1812,7 +1812,7 @@
               <button class="nav-item" data-subcapitulo="4.4">🦋 Polillas</button>
               <button class="nav-item" data-subcapitulo="4.5">🦇 Murciélagos</button>
               <button class="nav-item" data-subcapitulo="4.6">⭐ Especies de Interés</button>
-              <button class="nav-item" data-subcapitulo="4.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="4.7">En Riesgo</button>
               <button class="nav-item active" data-subcapitulo="4.8">🧬 Subespecies</button>              
             </div>
           </div>
