Ajustes en la forma de como mostrar la simbologia de las capas

--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -324,19 +324,12 @@
           </div>
 
                     <div class="subchapter-text">
-            <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
+            <!-- <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3> -->
             <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+             <p>Las polillas constituyen un grupo diverso de lepidópteros que funcionan como los principales polinizadores nocturnos, aunque su contribución real al servicio ecosistémico de polinización probablemente está subestimada. A nivel global, se han documentado especies polinizadoras en 23 familias, con más de 227 interacciones polilla-flor identificadas en Europa y Norteamérica. En México, algunas especies de las familias Noctuidae y Sphingidae destacan como polinizadoras de agaves.</p>
+             <p>Además de su rol como polinizadores, las polillas son consumidores primarios importantes y presas de otros taxa. Sin embargo, sus poblaciones han experimentado reducciones sustanciales debido a su sensibilidad ante perturbaciones ambientales, particularmente la degradación del hábitat y el cambio climático. </p>
+             <p>Estos factores pueden provocar modificaciones en su distribución geográfica y rangos altitudinales, con consecuencias potenciales sobre la estructura de los ensamblajes de especies y procesos ecosistémicos.</p>
+             <p>Para este análisis, la disponibilidad de datos de presencia tras el proceso de depuración limitó la modelación a únicamente dos especies: Acronyctodes mexicanaria y Rindgeria ornata. Ninguna de ellas resultó clasificada como altamente vulnerable ante los escenarios evaluados.</p>
             </div>
           </div>
 
@@ -369,19 +362,12 @@
           </div>
 
                     <div class="subchapter-text">
-           <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
+           <!-- <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3> -->
             <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+              <p>Los murciélagos representan el orden de mamíferos más diverso y desempeñan funciones ecológicas fundamentales: polinización, dispersión de semillas, control de plagas y mantenimiento de la biodiversidad, lo que les confiere gran importancia tanto ecológica como económica.</p>
+              <p>El cambio climático amenaza a este grupo a través de múltiples vías. Las alteraciones en precipitación y temperatura pueden modificar la disponibilidad de alimento, deteriorar refugios y sitios de reproducción como cuevas, y generar desfases entre los ciclos reproductivos de los murciélagos y sus recursos alimenticios.</p>
+              <p>La evidencia indica que las respuestas demográficas y espaciales serán predominantemente negativas, incluyendo mayor mortalidad, menor éxito reproductivo y contracción de rangos de distribución. Un caso crítico es la reducción proyectada en la superposición entre el murciélago magueyero (Leptonycteris nivalis) y los agaves que poliniza, lo cual podría afectar la reproducción y diversidad genética de estas plantas. La intensificación de eventos climáticos extremos, combinada con cambio de uso del suelo y fragmentación del hábitat, probablemente reducirá los servicios ecosistémicos que proveen.</p>
+              <p>De las especies evaluadas, únicamente el murciélago mula mexicano (Corynorhinus mexicanus) resultó altamente vulnerable bajo los escenarios SSP 2-4.5 y 5-8.5 para el horizonte 2041-2060.</p>
             </div>
           </div>
 
@@ -414,19 +400,12 @@
           </div>
 
                     <div class="subchapter-text">
-           <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
+          <!--  <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3> -->
             <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+            <p>Este grupo comprende siete especies y dos subespecies particularmente relevantes para el estado. Entre los reptiles se incluyen el huico llanero (Aspidoscelis costatus y su subespecie A. costatus subsp. costatus), lagartijas endémicas de la familia Teiidae, así como la víbora de cascabel pigmea (Crotalus ravus y C. ravus subsp. ravus).</p>
+            <p>Las aves evaluadas incluyen al pájaro carpintero mexicano (Dryobates scalaris) y al correcaminos norteño (Geococcyx californianus). También se consideró al murciélago magueyero menor (Leptonycteris yerbabuenae), importante polinizador de agaves.</p>
+            <p>Entre los invertebrados destaca la luciérnaga de la Sierra Nevada (Photinus palaciosi), escarabajo endémico de la familia Lampyridae distribuido en los límites de Puebla y Tlaxcala. Completa el grupo el pino escobetón (Pinus devoniana).</p>
+            <p>Los modelos de circulación HadGEM3-GC31-LL y MIROC6 proyectan la mayor cantidad de especies de este grupo con vulnerabilidad alta, bajo los escenarios SSP 2-4.5 y 5-8.5 respectivamente, para el horizonte 2041-2060.</p>
             </div>
           </div>
 
@@ -459,19 +438,12 @@
           </div>
 
                     <div class="subchapter-text">
-            <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
+            <!-- <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3> -->
             <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+              <p>Se prevé que las especies endémicas, amenazadas y en peligro de extinción pierdan más hábitat que otras debido al cambio climático. Los impactos serán desproporcionadamente mayores para estos grupos, ya que frecuentemente poseen hábitats especializados y presentan poblaciones relativamente escasas.</p>
+              <p>A partir de una iniciativa intersectorial se construyó una lista de especies prioritarias que, por su importancia estratégica, económica o ecológica, representan objetivos de conservación con mayor alcance. Los esfuerzos destinados a su protección generan beneficios que se extienden hacia los ecosistemas que habitan y las especies asociadas a ellos.</p>
+              <p>La evaluación de vulnerabilidad climática reveló resultados preocupantes para estos grupos. Bajo el modelo HadGEM3-GC31-LL, escenario SSP 2-4.5 y horizonte temporal 2041-2060, un total de 53 especies presentan alta vulnerabilidad.</p>
+              <p>Esta cifra representa aproximadamente el 50% del total de especies evaluadas para estos grupos, lo que subraya la urgencia de implementar estrategias de conservación y adaptación focalizadas en estas poblaciones particularmente sensibles.</p>
             </div>
           </div>
 
@@ -504,19 +476,12 @@
           </div>
 
                     <div class="subchapter-text">
-           <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
+           <!-- <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3> -->
             <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+            <p>A partir de los registros de especies con presencia en el estado se seleccionaron 12 subespecies para evaluar su vulnerabilidad climática. Este grupo incluye representantes de diversos taxa: aves, reptiles, mamíferos, insectos y plantas.</p>
+            <p>Entre los vertebrados se encuentran la cerceta americana (Anas crecca subsp. carolinensis), la tuza del Eje Neovolcánico (Cratogeomys fumosus subsp. tylorhinus), la víbora de cascabel de Huamantla (Crotalus scutulatus subsp. salvini), el camaleón de montaña (Phrynosoma orbiculare subsp. cortezii y P. orbiculare subsp. orbiculare), la lagartija espinosa del mezquite (Sceloporus grammicus subsp. microlepidotus) y la culebra de agua nómada mexicana (Thamnophis eques subsp. eques).</p>
+            <p>También se evaluaron la mariposa monarca (Danaus plexippus subsp. plexippus), así como plantas como la biznaga colmillos de elefante (Coryphantha elephantidens subsp. elephantidens), el enebro azul (Juniperus monticola subsp. compacta), el nopal cardón (Opuntia streptacantha subsp. streptacantha) y el trébol de la costa (Trifolium wormskioldii subsp. ortegae).</p>
+            <p>Los resultados indican que 8 de las 12 subespecies evaluadas presentarán alta vulnerabilidad bajo el modelo HadGEM3-GC31-LL, escenario SSP 2-4.5, para el horizonte 2041-2060.</p>
             </div>
           </div>
 
