Creacion template clima y ajustes en control de capas en vulnerabilidades

--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
           <a href="impactos.html" class="story-map-button">Explorar</a>
         </div>
 
+        <!-- Card Clima -->
+        <div class="story-map-card card-clima" onclick="location.href='clima.html'">
+          <!-- <div class="story-map-icon">🌤️</div> -->
+          <h2 class="story-map-title">Clima</h2>
+          <p class="story-map-description">
+            Explora los escenarios climáticos y proyecciones para Tlaxcala
+          </p>
+          <a href="clima.html" class="story-map-button">Explorar</a>
+        </div>
+
         <!-- Card Acciones Climáticas -->
         <div class="story-map-card card-acciones" onclick="location.href='acciones-climaticas.html'">
           <!-- <div class="story-map-icon">🌱</div> -->
